<resources>
    <string name="app_name">Live Dead Counter</string>
    <string name="action_settings">Settings</string>
    <string name="vcd_calculation_text">&lt;u> &lt;b> Viable Cell Density (VCD)&lt;/b> &lt;/u> &lt;br>
        %1$s cells/mL &lt;br>&lt;br> &lt;u> &lt;b>Viability &lt;/b> &lt;/u> &lt;br>
        %2$4.2f%%</string>
    <string name="vcd_text">Viable Cell Density (VCD) = %1$s cells/mL \n Viability = %2$4.2f%%</string>
    <string name="Q1Text">Q1</string>
    <string name="Q2Text">Q2</string>
    <string name="Q3Text">Q3</string>
    <string name="Q4Text">Q4</string>
    <string name="clear_all">Clear All</string>
    <string name="reset_text">Reset</string>
    <string name="calculate_text">Calculate</string>
    <string name="results_title">Results</string>
    <string name="save">Save</string>
    <string name="total_count_detail_title">Title</string>
    <string name="total_count_title_hint">Enter a title for this count</string>
    <string name="total_count_details">Details</string>
    <string name="quadrant_count_text">Live: %1$d \nDead: %2$d</string>
    <string name="total_count_counts">Counts</string>
    <string name="total_count_comment_hint">Add comments here</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="counts">Counts</string>
    <string name="view_counts">View Counts</string>
    <string name="confirm_delete_text">Confirm Delete</string>
    <string name="date_time_picker_title">Select Date</string>
    <string name="settings">Settings</string>
    <string name="directions">Directions</string>


    <string name="directions_text">1. Add Trypan blue to cells at desired concentration
        (typically 10%, make sure to adjust final concentration in settings). \n \n
        2. Add 10uL of cells to hemocytometer and view under microscope. \n \n
        3. Count the number of cells in each of the 4 quadrants as shown. \n \n
        4. Select \"Calculate\" to calculate the viable cell density and viability.* \n \n
        *<b>NOTE:</b> only quadrants with non-zero counts will be included in the calculation</string>
    <string name="help">Help</string>
    <string name="confirm_clear">Clear all counts?</string>
</resources>
