<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".LiveDeadCounterActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="3" app:showAsAction="never" />
    <item android:id="@+id/clear_all_settings" android:title="@string/clear_all"
          app:showAsAction="never" android:orderInCategory="2"/>
    <item android:id="@+id/counts_list_settings" android:title="@string/view_counts"
          app:showAsAction="never" android:orderInCategory="1"/>
    <item android:id="@+id/help_settings" android:title="@string/help"
          app:showAsAction="never" android:orderInCategory="100"/>
</menu>
