<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
    android:id="@+id/total_count_details_fragment">
    <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_count_detail_title"
            style="?android:listSeparatorTextViewStyle"/>
        <EditText
            android:id="@+id/total_count_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:hint="@string/total_count_title_hint"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="text"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_count_counts"
            style="?android:listSeparatorTextViewStyle"/>
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_marginBottom="16dp">
                <TextView
                    android:id="@+id/total_count_vcd_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/vcd_calculation_text"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/total_count_q1_text"
                    style="@style/QuadrantCountDetailsText"/>
                <TextView
                    android:id="@+id/total_count_q2_text"
                    style="@style/QuadrantCountDetailsText"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/total_count_q3_text"
                    style="@style/QuadrantCountDetailsText"/>
                <TextView
                    android:id="@+id/total_count_q4_text"
                    style="@style/QuadrantCountDetailsText"/>
            </TableRow>
        </TableLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_count_details"
            style="?android:listSeparatorTextViewStyle"/>
        <Button
            android:id="@+id/total_count_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"/>
        <EditText
            android:id="@+id/total_count_comments"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:lines="6"
            android:minLines="1"
            android:maxLines="8"
            android:layout_gravity="center"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:gravity="top|left"
            android:hint="@string/total_count_comment_hint"/>

    </LinearLayout>
</ScrollView>